# snipes

./: .gitignore  LICENSE  README.md  ai.py  camera.py  entities.py  main.py  maze.py  physics.py  pyproject.toml  renderer.py  screens.py
snipe/: __init__.py  __main__.py  ai.py  camera.py  entities.py  main.py  maze.py  physics.py  renderer.py  screens.py  settings.py
